# ocr-vx

./: LICENSE  LICENSE_UNIVIE  README.md
build_distributed_fake/: CMakeLists.txt
build_distributed_mpi/: CMakeLists.txt
build_distributed_sock/: CMakeLists.txt
build_one/: CMakeLists.txt
build_shm/: CMakeLists.txt
include/common/: ocr_log.h  parallelization.h  text_exception.h  threadqueue.h  zmq.hpp
include/distributed/: communication.h  compute_node.h  config.h  context.h  data_cache.h  guid.h  local_communicator.h  message.h  mpi_communicator.h  object_cache.h  object_repository.h  ocr_distributed.h  runtime.h  socket_communicator.h  types.h
include/ocr/: ocr-db.h  ocr-edt.h  ocr-errors.h  ocr-guid-functions.h  ocr-options_v1.h  ocr-options_vdm.h  ocr-options_vsm.h  ocr-stathooks.h  ocr-std.h  ocr-types.h  ocr-version.h  ocr.h
include/ocr/extensions/: WARNING  ocr-affinity.h  ocr-db-by-value.h  ocr-db-partitioning.h  ocr-debug.h  ocr-file.h  ocr-heterogeneous.h  ocr-hints.h  ocr-labeling.h  ocr-legacy.h  ocr-map-creator.h  ocr-opencl.h  ocr-pause.h  ocr-pdl.h  ocr-profiler-internal.h  ocr-profiler.h  ocr-reduction-event.h  ocr-runtime-itf.h
include/one/: boot.h  config.h  db.h  edt.h  edt_template.h  event.h  event_dump.h  file_io.h  guid.h  labeled_guids.h  log.h  node.h  runtime.h  types.h
include/shmem/: db_allocator.h  ocr_tbb.h  ocr_tbb_config.h  ocr_tbb_db.h  ocr_tbb_edt.h  ocr_tbb_event.h  ocr_tbb_guided.h  ocr_tbb_locking.h  ocr_tbb_logging.h  ocr_tbb_memory.h  ocr_tbb_node.h  ocr_tbb_range.h  ocr_tbb_runtime.h  ocr_tbb_tasking.h  ocr_tbb_types.h
src/: ocr.cpp  ocr_api.cpp  ocr_log.cpp  ocr_tbb_guided.cpp  ocr_tbb_main.cpp  parallelization.cpp  threadqueue.cpp
src/apps/: api_tests.cpp
src/distributed/: command_processing.cpp  communication.cpp  ocr_api_impl.cpp  ocr_distributed.cpp  ocr_distributed_main.cpp
src/one/: guid.cpp  ocr_api.cpp  ocr_one.cpp
