cmake_minimum_required (VERSION 2.6)
project (ocr_tbb)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ".")
set(Compiler "gcc" CACHE STRING "The compiler to use (gcc,icc,gcc63)")
if(${Compiler} STREQUAL "gcc")
message("Using GCC")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
add_definitions(-DCOMPILER_INFO=gcc)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()
if(${Compiler} STREQUAL "icc")
message("Using Intel")
set(CMAKE_C_COMPILER "icc")
set(CMAKE_CXX_COMPILER "icc")
add_definitions(-DCOMPILER_INFO=icc)
#set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -xavx")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -axavx")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -axMIC-AVX512,SSE4.2")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -axMIC-AVX512,SSE4.2")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -axMIC-AVX512,SSE4.2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -axMIC-AVX512,SSE4.2")
endif()
if(${Compiler} STREQUAL "gcc63")
message("Using GCC 6.3")
set(CMAKE_C_COMPILER "gcc63")
set(CMAKE_CXX_COMPILER "g++63")
add_definitions(-DCOMPILER_INFO=gcc63)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse4.2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -msse4.2")
endif()
if(${Compiler} STREQUAL "gcc63avx")
message("Using GCC 6.3 AVX")
set(CMAKE_C_COMPILER "gcc63")
set(CMAKE_CXX_COMPILER "g++63")
add_definitions(-DCOMPILER_INFO=gcc63avx)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx512f -mavx512cd -mavx512er -mavx512pf")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -mavx512f -mavx512cd -mavx512er -mavx512pf")
endif()
#find_package(TBB REQUIRED)

find_file(RasPi bcm_host.h PATHS /opt/vc/include/ NO_DEFAULT_PATH)
if(RasPi)
  add_definitions(-DTBB_USE_GCC_BUILTINS=1)
endif()

include_directories (../include/ocr ../include/common ../include/shmem ../include/apps ../include/libs ../include/bobox ~/ulibpp/h) 
link_directories(${TBB_LIBRARY_DIRS} ~/ulibpp/lib/release)
add_definitions(-DOCR_ENABLE_EDT_NAMING)
add_definitions(-DOCR_TYPE_H=vsm.h)
if(UNIX)
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -xavx")
    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
endif()
#add_definitions(-std=c++11)

file(MAKE_DIRECTORY log)

#add_library(ocr_tbb ../src/ocr.cpp ../src/ocr_api.cpp ../src/ocr_tbb_main.cpp ../src/ocr_tbb_guided.cpp ../src/ocr_log.cpp ../src/parallelization.cpp ../src/bobox/api.cpp ../src/bobox/manager.cpp ../src/bobox/node_manager.cpp ../src/bobox/scheduler.cpp ../src/bobox/scheduling_manager.cpp ../src/bobox/task.cpp)
add_library(ocr_tbb ../src/ocr.cpp ../src/ocr_api.cpp ../src/ocr_tbb_main.cpp ../src/ocr_tbb_guided.cpp ../src/ocr_log.cpp ../src/parallelization.cpp ../src/threadqueue.cpp)

macro (add_executable _name)
    # invoke built-in add_executable
    _add_executable(${ARGV})
    if (TARGET ${_name})
#        target_link_libraries(${_name} ocr_tbb tbb tbbmalloc pthread hwloc ulibpp rt memkind numa)
        target_link_libraries(${_name} ocr_tbb zmq tbb tbbmalloc pthread hwloc ulibpp rt)
    endif()
endmacro()

add_executable (hello ../src/apps/helloworld.cpp)
add_executable (api_tests ../src/apps/api_tests.cpp)
add_executable (producer ../src/apps/producer.cpp)
add_executable (consumer ../src/apps/consumer.cpp)
add_executable (seismic ../src/apps/seismic.cpp)
add_executable (stencil2d ../src/apps/stencil_2d.c ../src/apps/reduction.c ../src/apps/timers.c)
add_executable (graph500 ../src/apps/graph500.cpp)
#add_executable (spmd ../src/libs/spmd.cpp ../src/apps/spmd_test.cpp)
